--- a/subespecialidades.html
+++ b/subespecialidades.html
@@ -1,3 +1,8 @@
+<nav>
+    <a href="index.html">Inicio</a> |
+    <a href="subespecialidades.html">Validar Subespecialidades</a> |
+    <!-- Puedes seguir añadiendo enlaces a las futuras páginas aquí -->
+</nav>
 <!DOCTYPE html>
 <html lang="es">
 <head>
