--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
         <div class="medico-list" id="medicoList"></div>
 
         <nav>
-            <a href="subespecialidades.html">Ir a Subespecialidades</a>
+            <a href="subespecialidades.html">Ir a Subespecialidades</a><br><br>
+            <a href="consultas.html">Crear Consultas</a> <!-- Enlace añadido para la nueva página de consultas -->
         </nav>
     </div>
 
