--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 
         <nav>
             <a href="subespecialidades.html">Ir a Subespecialidades</a><br><br>
-            <a href="consultas.html">Crear Consultas</a> <!-- Enlace añadido para la nueva página de consultas -->
+            <a href="consultas.html">Crear Consultas</a><br><br>
+            <a href="calendario.html">Calendario Interactivo</a> <!-- Enlace añadido para el calendario -->
         </nav>
     </div>
 
