--- a/calendario.html
+++ b/calendario.html
@@ -63,6 +63,14 @@
         .calendario .selected-yellow {
             background-color: #ffffcc !important;
         }
+        .btn-save {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
         nav {
             margin-top: 20px;
         }
@@ -78,12 +86,11 @@
         <h2>Calendario Interactivo</h2>
         <div class="form-group">
             <label for="medico">Seleccionar Médico:</label>
-            <select id="medico"></select>
+            <select id="medico" onchange="generarCalendario()"></select>
         </div>
         <div class="form-group">
             <label for="mes">Mes:</label>
             <select id="mes" onchange="generarCalendario()">
-                <!-- Opciones de meses -->
                 <option value="0">Enero</option>
                 <option value="1">Febrero</option>
                 <option value="2">Marzo</option>
@@ -99,10 +106,11 @@
             </select>
 
             <label for="anio">Año:</label>
-            <select id="anio" onchange="generarCalendario()">
-                <!-- Opciones de años -->
-            </select>
+            <select id="anio" onchange="generarCalendario()"></select>
         </div>
+
+        <!-- Botón para guardar los cambios -->
+        <button class="btn-save" onclick="guardarCambios()">Guardar cambios</button>
 
         <div class="calendario" id="calendario">
             <!-- Aquí se generará el calendario -->
@@ -118,6 +126,7 @@
         const calendarioDiv = document.getElementById('calendario');
         const mesSelect = document.getElementById('mes');
         const anioSelect = document.getElementById('anio');
+        let calendarioSeleccion = {};
 
         // Cargar médicos de localStorage al cargar la página
         window.onload = function() {
@@ -151,6 +160,7 @@
         function generarCalendario() {
             const mes = parseInt(mesSelect.value);
             const anio = parseInt(anioSelect.value);
+            const correoMedico = medicoSelect.value;
 
             calendarioDiv.innerHTML = '';  // Limpiar calendario
             const diasSemana = ['Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb', 'Dom'];
@@ -165,6 +175,9 @@
             const ultimoDia = new Date(anio, mes + 1, 0).getDate();
             let diaActual = 1;
             let iniciado = false;
+
+            // Cargar preferencias guardadas
+            calendarioSeleccion = JSON.parse(localStorage.getItem(`${correoMedico}-${mes}-${anio}`)) || {};
 
             for (let i = 0; i < 6 * 7; i++) {
                 const diaDiv = document.createElement('div');
@@ -181,14 +194,25 @@
                     if (diaSemana === 5 || diaSemana === 6) {
                         diaDiv.classList.add('weekend');  // Sábados y domingos
                     }
+
+                    // Restaurar selección guardada (rojo o amarillo)
+                    if (calendarioSeleccion[diaActual] === 'rojo') {
+                        diaDiv.classList.add('selected-red');
+                    } else if (calendarioSeleccion[diaActual] === 'amarillo') {
+                        diaDiv.classList.add('selected-yellow');
+                    }
+
                     diaDiv.onclick = function() {
                         if (diaDiv.classList.contains('selected-red')) {
                             diaDiv.classList.remove('selected-red');
                             diaDiv.classList.add('selected-yellow');
+                            calendarioSeleccion[diaActual] = 'amarillo';
                         } else if (diaDiv.classList.contains('selected-yellow')) {
                             diaDiv.classList.remove('selected-yellow');
+                            delete calendarioSeleccion[diaActual];  // Borrar selección
                         } else {
                             diaDiv.classList.add('selected-red');
+                            calendarioSeleccion[diaActual] = 'rojo';
                         }
                     };
                     diaActual++;
@@ -196,6 +220,17 @@
 
                 calendarioDiv.appendChild(diaDiv);
             }
+        }
+
+        // Función para guardar las preferencias de cada médico
+        function guardarCambios() {
+            const correoMedico = medicoSelect.value;
+            const mes = mesSelect.value;
+            const anio = anioSelect.value;
+
+            // Guardar en localStorage
+            localStorage.setItem(`${correoMedico}-${mes}-${anio}`, JSON.stringify(calendarioSeleccion));
+            alert('Cambios guardados con éxito.');
         }
     </script>
 </body>
